[tool.poetry]
name = "raspserver"
version = "0.1.0"
description = "Server for storing files on a disk."
authors = ["Dmytro Berehovets <dberehovets@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.101.1"
bootstrap-py = "2.0.0"
uvicorn = "0.23.2"
werkzeug = "^2.3.7"
pydantic-settings = "^2.0.3"
isort = "^5.12.0"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
